--- a/components/Style/css/style.scss
+++ b/components/Style/css/style.scss
@@ -1,6 +1,8 @@
+// 参考
+// https://dubdesign.net/download/html-css/carddesign-6/#i-3
+
+// ---- Pattern1 -----------------------------------------------
 .ProfileCard {
-  // 参考
-  // https://dubdesign.net/download/html-css/carddesign-6/#i-3
   $parent: '.ProfileCard';
 
   &__wrapper {
@@ -125,5 +127,116 @@
     &--danger {
       color: #bc0f0f;
     }
+  }
+}
+
+// ---- Pattern1 -----------------------------------------------
+$default: '.VanpCard';
+
+.VanpCard {
+  &__wrapper {
+    width: 380px;
+    margin: 2rem auto;
+
+    background-color: #fff;
+
+    box-shadow: 0 4px 15px rgb(255, 255, 255);
+    overflow: hidden;
+    border-radius: 8px;
+  }
+
+  &__card {
+    padding-bottom: 0.5rem;
+
+    color: #212121;
+
+    box-shadow: 0 0 0px rgba(0, 0, 0, 0.16);
+    text-decoration: none;
+  }
+
+  &__header {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__title {
+    padding: 1rem 1.5rem 0;
+
+    font-size: 1.6rem;
+    font-weight: bold;
+    text-decoration: none;
+    border-bottom: solid 3px black;
+
+    order: 1;
+  }
+
+  &__figure {
+    background-color: #fff;
+
+    margin: 0;
+    order: 0;
+
+    border-radius: 2.5%;
+  }
+
+  &__image {
+    width: 100%;
+  }
+
+  &__body {
+    padding: 0 1.5rem;
+  }
+
+  &__main_sentence {
+    font-size: 0.8rem;
+    text-decoration: none;
+  }
+}
+
+.violet {
+  #{$default}__wrapper {
+    background-color: #fbeaff;
+    box-shadow: 0 4px 15px #c35ef2;
+  }
+
+  #{$default}__title {
+    color: #5d0f70;
+    border-bottom: solid 3px #700f58;
+  }
+
+  #{$default}__main_sentence {
+    color: #9f0fbc;
+  }
+}
+
+.wine {
+  #{$default}__wrapper {
+    background-color: #bc0f37;
+    box-shadow: 0 4px 15px #d40a68;
+  }
+
+  #{$default}__title {
+    color: #ffeaea;
+    border-bottom: solid 3px #ffeaea;
+  }
+
+  #{$default}__main_sentence {
+    color: #ffeaea;
+  }
+}
+
+.blood {
+  #{$default}__wrapper {
+    background-color: #390404;
+    box-shadow: 0 4px 15px #390404; // 390404
+  }
+
+  #{$default}__title {
+    color: #ff0000;
+    border-bottom: solid 3px #ff0000;
+  }
+
+  #{$default}__main_sentence {
+    color: #ff0000;
   }
 }
