--- a/components/Style/css/style.scss
+++ b/components/Style/css/style.scss
@@ -228,7 +228,7 @@ $default: '.VanpCard';
 .blood {
   #{$default}__wrapper {
     background-color: #390404;
-    box-shadow: 0 4px 15px #390404; // 390404
+    box-shadow: 0 4px 15px #390404;
   }
 
   #{$default}__title {
